# MyoLinux

./: CMakeLists.txt  Doxyfile  README.md  doxygen.config
src/: bleapi.h  bleapi.xml  bled112.h  bled112client.cpp  bled112client.h  bluetoothserial.cpp  bluetoothserial.h  buffer.cpp  buffer.h  conf.py  device.cpp  device.h  firstargument.h  gattclient.cpp  gattclient.h  generator.py  main.cpp  myoapi.h  myoapi_p.h  myoclient.cpp  myoclient.h  myohw.h  myolinux.h  serial.cpp  serial.h
